force-app/main/default/objects/echosign_dev1__Agreement_Template__c/echosign_dev1__Agreement_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <description>Agreement Templates allow you to predefine default settings and options for your agreements which can save you time and help minimize errors.</description>
    <label>Agreement Template</label>
    <nameField>
        <label>Agreement Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>