force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Active__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls visibility of the Agreement Template.</description>
    <inlineHelpText>If checked, the Agreement Template is visible, else it is not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>