force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Auto_Send__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Auto_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</description>
    <inlineHelpText>Automatically send the agreement without displaying the send page. (e.g. triggered workflows) Make sure to add a recipient and a file attachment if using this option.</inlineHelpText>
    <label>Auto Send</label>
    <type>Checkbox</type>
</CustomField>