force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Automatic_Reminders__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Automatic_Reminders__c</fullName>
    <description>Send automatic reminders to signers.</description>
    <inlineHelpText>Send automatic reminders to signers.</inlineHelpText>
    <label>Automatic Reminders</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>Every Day, Until Signed</fullName>
            </value>
            <value>
                <fullName>Every Week, Until Signed</fullName>
            </value>
            <value>
                <fullName>Every Business Day, Until Signed</fullName>
            </value>
            <value>
                <fullName>Every Other Day, Until Signed</fullName>
            </value>
            <value>
                <fullName>Every Third Day, Until Signed</fullName>
            </value>
            <value>
                <fullName>Every Fifth Day, Until Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>