force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Confirm_Password__c</fullName>
    <description>Confirm the password that you want the recipient to input.</description>
    <inlineHelpText>Confirm the password that you want the recipient to input.</inlineHelpText>
    <label>Confirm Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>