force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Days_Until_Expiration2__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Days_Until_Expiration2__c</fullName>
    <description>Set the number of days before the agreement expires.</description>
    <inlineHelpText>Set the number of days before the agreement expires.</inlineHelpText>
    <label>Days Until Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>