force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Email_Copy_To__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Email_Copy_To__c</fullName>
    <description>Send copies of the agreement to the specified email addresses.</description>
    <inlineHelpText>Send copies of the agreement to the specified email addresses.</inlineHelpText>
    <label>Email Copy To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>