force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Fill_Sign__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Fill_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the agreement or document is presented only to the sender to fill and sign. Post Send page can be used to forward the signed document.</description>
    <inlineHelpText>When enabled, the agreement or document is presented only to the sender to fill and sign. Post Send page can be used to forward the signed document.</inlineHelpText>
    <label>Fill &amp; Sign</label>
    <type>Checkbox</type>
</CustomField>