force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Hosted_Signing__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Hosted_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable hosted in-person signing.</description>
    <inlineHelpText>Enable hosted in-person signing.</inlineHelpText>
    <label>Enable Hosted Signing</label>
    <type>Checkbox</type>
</CustomField>