force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Master_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Master_Object_Type__c</fullName>
    <description>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</description>
    <inlineHelpText>Specify the Salesforce object that will be referenced for this agreement template. (e.g. Opportunity, Lead)</inlineHelpText>
    <label>Master Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>