force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Merge_Mapping__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Merge_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the merge mapping to merge Salesforce fields into the Adobe Acrobat Sign agreement before it is sent for signature.</description>
    <inlineHelpText>Select the merge mapping to merge Salesforce fields into the Adobe Acrobat Sign agreement before it is sent for signature.</inlineHelpText>
    <label>Merge Mapping</label>
    <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
    <relationshipLabel>Agreement Templates</relationshipLabel>
    <relationshipName>Agreement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>