force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Name__c</fullName>
    <defaultValue>&quot;Adobe Acrobat Sign Agreement&quot;</defaultValue>
    <description>Enter a name for the agreement.</description>
    <inlineHelpText>Enter a name for the agreement.</inlineHelpText>
    <label>Agreement Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>