force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Post_Sign_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Post_Sign_Redirect_URL__c</fullName>
    <label>Post Sign Redirect URL</label>
    <type>Url</type>
</CustomField>