force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Preview_Position__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Preview_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable signers to preview and position fields on the document before agreement is sent for signature.</description>
    <inlineHelpText>Enable signers to preview and position fields on the document before agreement is sent for signature.</inlineHelpText>
    <label>Enable Preview and Position Fields</label>
    <type>Checkbox</type>
</CustomField>