force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Sender_User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sender_User__c</fullName>
    <description>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</description>
    <inlineHelpText>When the agreement is auto sent or sent using an automated workflow, the agreement will be sent on behalf of the user specified by this field. If not specified, the current context user will be used as usual.</inlineHelpText>
    <label>Send On Behalf Of</label>
    <type>TextArea</type>
</CustomField>