force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Sign_Password__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sign_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set a password the recipient needs to enter to sign the agreement.</description>
    <inlineHelpText>Set a password the recipient needs to enter to sign the agreement.</inlineHelpText>
    <label>Password to Sign Agreement</label>
    <type>Checkbox</type>
</CustomField>