force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Signature_Flow__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signature_Flow__c</fullName>
    <description>Set the recipient order for signing documents.</description>
    <inlineHelpText>Set the recipient order for signing documents.</inlineHelpText>
    <label>Signature Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recipients sign in order</fullName>
                <default>true</default>
                <label>Recipients sign in order</label>
            </value>
            <value>
                <fullName>Recipients sign in any order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>