force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Signature_Order__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signature_Order__c</fullName>
    <description>Enable the sender to also sign the agreement by selecting a signature order.</description>
    <inlineHelpText>Enable the sender to also sign the agreement by selecting a signature order.</inlineHelpText>
    <label>Sender Signature Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recipients sign first, then sender signs</fullName>
            </value>
            <value>
                <fullName>Sender signs first, then recipients sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>