force-app/main/default/objects/echosign_dev1__Agreement_Template__c/fields/echosign_dev1__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Template_Name__c</fullName>
    <description>Agreement template name can have up to 255 characters.</description>
    <inlineHelpText>Agreement template name can have up to 255 characters.</inlineHelpText>
    <label>Long Agreement Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>