force-app/main/default/objects/echosign_dev1__Agreement_Template__c/validationRules/echosign_dev1__Enabled_Password_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__Enabled_Password_Set</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Enter a password that you want the recipient to input.</errorMessage>
</ValidationRule>