force-app/main/default/objects/echosign_dev1__Agreement_Template__c/validationRules/echosign_dev1__Minimum_Expiration_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__Minimum_Expiration_Days</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>There is a minimum of 1 days before document expiration.</errorMessage>
</ValidationRule>