force-app/main/default/objects/echosign_dev1__Agreement_Template__c/validationRules/echosign_dev1__Preview_Hosted_With_Auto_Send.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__Preview_Hosted_With_Auto_Send</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( echosign_dev1__Hosted_Signing__c, echosign_dev1__Preview_Position__c ),  echosign_dev1__Auto_Send__c )</errorConditionFormula>
    <errorMessage>Enabling in-person or preview/position fields is not allowed with auto send enabled.</errorMessage>
</ValidationRule>